controls/C-0018/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "kubescape-c-0018-deny-resources-without-configured-readiness-probes"
  labels:
    controlId: "C-0018"
  annotations:
    controlUrl: "https://kubescape.io/docs/controls/c-0018/"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  validations:
    - expression: "object.kind != 'Pod' || object.spec.containers.all(container, has(container.readinessProbe))"
      message: "Pods must have readinessProbe set up (see more at https://kubescape.io/docs/controls/c-0018/)"
    - expression: "['Deployment','ReplicaSet','DaemonSet','StatefulSet','Job'].all(kind, object.kind != kind) || object.spec.template.spec.containers.all(container, has(container.readinessProbe))"
      message: "Workloads must have readinessProbe set up (see more at https://kubescape.io/docs/controls/c-0018/)"
    - expression: "object.kind != 'CronJob' || object.spec.jobTemplate.spec.template.spec.containers.all(container, has(container.readinessProbe))"
      message: "CronJob must have readinessProbe set up (see more at https://kubescape.io/docs/controls/c-0018/)"
